--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "my-react-redux-app",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@reduxjs/toolkit": "^1.1.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "babel": "^6.23.0",
+    "node": "^16.18.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-dom-confetti": "^0.2.0",
-    "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
-    "unsplash": "^4.2.0",
-    "web-vitals": "^2.1.4"
+    "react-redux": "^7.1.3",
+    "react-scripts": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "prettier --write src/*/**"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -40,6 +37,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.8.0"
+    "prettier": "2.2.1"
   }
 }
